--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>SelectRutina</title>
+  <title>iGloveGT</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- FONT AWESOME -->
+  <script src="https://kit.fontawesome.com/9a7ba73f6a.js" crossorigin="anonymous"></script>
 </head>
+
 <body class="bg-light">
   <app-root></app-root>
 </body>
+
 </html>
